<resources>
    <string name="app_name">US Talk</string>
    <string name="search">Tìm kiếm</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Mật khẩu</string>
    <string name="confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="name_hint">Tên người dùng</string>
    <string name="welcome">Chào mừng tới</string>
    <string name="dont_have_account">Không có tài khoản?</string>
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="sign_up_label">Mẫu đăng ký</string>
    <string name="sex">Giới tính:</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="sex_male">Nam</string>
    <string name="sex_female">Nữ</string>
    <string name="bottom_tab_1">Home</string>
    <string name="bottom_tab_2">Contact</string>
    <string name="save">Lưu</string>
    <string name="back">Quay về</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="chat_hint">Aa</string>
    <string name="settings">Cài đặt</string>
    <string name="setting_profile">Hồ sơ</string>
    <string name="setting_password">Đổi mật khẩu</string>
    <string name="setting_notification">Thông báo</string>
    <string name="profile_tip">Xem và chỉnh sửa các thông tin cơ bản về bạn</string>
    <string name="password_tip">Đổi mật khẩu định kỳ sẽ giúp bảo vệ tài khoản của bạn tốt hơn</string>
    <string name="notification_tip">Cài đặt thông báo thông minh có thể giúp bạn tập trung hơn trong công việc của mình</string>
    <string name="logout">Đăng xuất</string>
    <string name="profile">Hồ sơ</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="turn_off_notification">Tắt thông báo</string>
    <string name="in_15_minutes">Trong 15 phút</string>
    <string name="in_30_minutes">Trong 30 phút</string>
    <string name="in_60_minutes">Trong 60 phút</string>
    <string name="until_i_turn_on_again">Cho đến khi tôi bật lại</string>
</resources>