<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:orientation="vertical"
    android:paddingTop="15dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thay đổi thông tin"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!--    Guideline Helpers-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_hint"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/label_name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@+id/label_name"
            app:layout_constraintStart_toStartOf="@+id/label_name"
            app:layout_constraintTop_toBottomOf="@+id/label_name"
            android:id="@+id/editName"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/editName"
            app:layout_constraintStart_toStartOf="@+id/editName"
            app:layout_constraintTop_toBottomOf="@+id/editName"
            android:id="@+id/label_sex"/>
        <RadioGroup
            android:id="@+id/rbtngr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@+id/label_sex"
            app:layout_constraintStart_toStartOf="@+id/label_sex"
            app:layout_constraintTop_toBottomOf="@+id/label_sex">
            <RadioButton
                android:id="@+id/rbtn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange"
                android:layoutDirection="rtl"
                android:text="@string/sex_male"
                android:textSize="20sp"
                android:background="@drawable/custom_radio_button"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/rbtn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange"
                android:layoutDirection="rtl"
                android:text="@string/sex_female"
                android:textSize="20sp"
                android:background="@drawable/custom_radio_button"
                android:layout_weight="1"
                android:paddingStart="20dp"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center|bottom">
        <android.widget.Button
            android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/custom_button_cold_background"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>
        <android.widget.Button
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/custom_button_background"
            android:text="Hủy"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</LinearLayout>